<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SermonsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/suggestionsRootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_gradient_bg"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/what_are_you_in_the_mood_for"
                android:textColor="#ffff"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/suggestions_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/newShowsRootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/newShowsSubLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/new_shows"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/goToRecommendation_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="Go to image view"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
                    app:tint="#000" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_shows_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/new_shows_row" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recommendedShowsRootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/recommendedShowsSubLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/recommended_for_you"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/goToRecommendation_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="Go to image view"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
                    app:tint="#000" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recom_shows_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/new_shows_row" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/faithRootLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/second_gradient_bg"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/faithSubLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/more_on_faith"
                    android:textColor="#fff"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/goToRecommendation_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="Go to image view"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/faith_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>